@@ -16,7 +16,6 @@
 #include <sys/stat.h>
 #include <sys/poll.h>
 #include <sys/wait.h>
-#include <sys/mount.h>
 #include <unistd.h>
 #include <fcntl.h>
 #include <signal.h>
@@ -2601,218 +2600,6 @@ int Mono_Posix_ToSignum (int x, int *r)
 		{*r = Mono_Posix_Signum_SIGUNUSED; return 0;}
 #endif /* ndef SIGUNUSED */
 	errno = EINVAL; return -1;
-}
-
-int Mono_Posix_FromMountFlags (guint64 x, guint64 *r)
-{
-	*r = 0;
-	if (x == 0)
-		return 0;
-	if ((x & Mono_Posix_MountFlags_MS_RDONLY) == Mono_Posix_MountFlags_MS_RDONLY)
-#ifdef MS_RDONLY
-		*r |= MS_RDONLY;
-#else /* def MS_RDONLY */
-		{errno = EINVAL; return -1;}
-#endif /* ndef MS_RDONLY */
-	if ((x & Mono_Posix_MountFlags_MS_NOSUID) == Mono_Posix_MountFlags_MS_NOSUID)
-#ifdef MS_NOSUID
-		*r |= MS_NOSUID;
-#else /* def MS_NOSUID */
-		{errno = EINVAL; return -1;}
-#endif /* ndef MS_NOSUID */
-	if ((x & Mono_Posix_MountFlags_MS_NODEV) == Mono_Posix_MountFlags_MS_NODEV)
-#ifdef MS_NODEV
-		*r |= MS_NODEV;
-#else /* def MS_NODEV */
-		{errno = EINVAL; return -1;}
-#endif /* ndef MS_NODEV */
-	if ((x & Mono_Posix_MountFlags_MS_NOEXEC) == Mono_Posix_MountFlags_MS_NOEXEC)
-#ifdef MS_NOEXEC
-		*r |= MS_NOEXEC;
-#else /* def MS_NOEXEC */
-		{errno = EINVAL; return -1;}
-#endif /* ndef MS_NOEXEC */
-	if ((x & Mono_Posix_MountFlags_MS_SYNCHRONOUS) == Mono_Posix_MountFlags_MS_SYNCHRONOUS)
-#ifdef MS_SYNCHRONOUS
-		*r |= MS_SYNCHRONOUS;
-#else /* def MS_SYNCHRONOUS */
-		{errno = EINVAL; return -1;}
-#endif /* ndef MS_SYNCHRONOUS */
-	if ((x & Mono_Posix_MountFlags_MS_REMOUNT) == Mono_Posix_MountFlags_MS_REMOUNT)
-#ifdef MS_REMOUNT
-		*r |= MS_REMOUNT;
-#else /* def MS_REMOUNT */
-		{errno = EINVAL; return -1;}
-#endif /* ndef MS_REMOUNT */
-	if ((x & Mono_Posix_MountFlags_MS_MANDLOCK) == Mono_Posix_MountFlags_MS_MANDLOCK)
-#ifdef MS_MANDLOCK
-		*r |= MS_MANDLOCK;
-#else /* def MS_MANDLOCK */
-		{errno = EINVAL; return -1;}
-#endif /* ndef MS_MANDLOCK */
-	if ((x & Mono_Posix_MountFlags_S_WRITE) == Mono_Posix_MountFlags_S_WRITE)
-#ifdef S_WRITE
-		*r |= S_WRITE;
-#else /* def S_WRITE */
-		{errno = EINVAL; return -1;}
-#endif /* ndef S_WRITE */
-	if ((x & Mono_Posix_MountFlags_S_APPEND) == Mono_Posix_MountFlags_S_APPEND)
-#ifdef S_APPEND
-		*r |= S_APPEND;
-#else /* def S_APPEND */
-		{errno = EINVAL; return -1;}
-#endif /* ndef S_APPEND */
-	if ((x & Mono_Posix_MountFlags_S_IMMUTABLE) == Mono_Posix_MountFlags_S_IMMUTABLE)
-#ifdef S_IMMUTABLE
-		*r |= S_IMMUTABLE;
-#else /* def S_IMMUTABLE */
-		{errno = EINVAL; return -1;}
-#endif /* ndef S_IMMUTABLE */
-	if ((x & Mono_Posix_MountFlags_MS_NOATIME) == Mono_Posix_MountFlags_MS_NOATIME)
-#ifdef MS_NOATIME
-		*r |= MS_NOATIME;
-#else /* def MS_NOATIME */
-		{errno = EINVAL; return -1;}
-#endif /* ndef MS_NOATIME */
-	if ((x & Mono_Posix_MountFlags_MS_NODIRATIME) == Mono_Posix_MountFlags_MS_NODIRATIME)
-#ifdef MS_NODIRATIME
-		*r |= MS_NODIRATIME;
-#else /* def MS_NODIRATIME */
-		{errno = EINVAL; return -1;}
-#endif /* ndef MS_NODIRATIME */
-	if ((x & Mono_Posix_MountFlags_MS_BIND) == Mono_Posix_MountFlags_MS_BIND)
-#ifdef MS_BIND
-		*r |= MS_BIND;
-#else /* def MS_BIND */
-		{errno = EINVAL; return -1;}
-#endif /* ndef MS_BIND */
-	if ((x & Mono_Posix_MountFlags_MS_RMT_MASK) == Mono_Posix_MountFlags_MS_RMT_MASK)
-#ifdef MS_RMT_MASK
-		*r |= MS_RMT_MASK;
-#else /* def MS_RMT_MASK */
-		{errno = EINVAL; return -1;}
-#endif /* ndef MS_RMT_MASK */
-	if ((x & Mono_Posix_MountFlags_MS_MGC_VAL) == Mono_Posix_MountFlags_MS_MGC_VAL)
-#ifdef MS_MGC_VAL
-		*r |= MS_MGC_VAL;
-#else /* def MS_MGC_VAL */
-		{errno = EINVAL; return -1;}
-#endif /* ndef MS_MGC_VAL */
-	if ((x & Mono_Posix_MountFlags_MS_MGC_MSK) == Mono_Posix_MountFlags_MS_MGC_MSK)
-#ifdef MS_MGC_MSK
-		*r |= MS_MGC_MSK;
-#else /* def MS_MGC_MSK */
-		{errno = EINVAL; return -1;}
-#endif /* ndef MS_MGC_MSK */
-	return 0;
-}
-
-int Mono_Posix_ToMountFlags (guint64 x, guint64 *r)
-{
-	*r = 0;
-	if (x == 0)
-		return 0;
-#ifdef MS_RDONLY
-	if ((x & MS_RDONLY) == MS_RDONLY)
-		*r |= Mono_Posix_MountFlags_MS_RDONLY;
-#endif /* ndef MS_RDONLY */
-#ifdef MS_NOSUID
-	if ((x & MS_NOSUID) == MS_NOSUID)
-		*r |= Mono_Posix_MountFlags_MS_NOSUID;
-#endif /* ndef MS_NOSUID */
-#ifdef MS_NODEV
-	if ((x & MS_NODEV) == MS_NODEV)
-		*r |= Mono_Posix_MountFlags_MS_NODEV;
-#endif /* ndef MS_NODEV */
-#ifdef MS_NOEXEC
-	if ((x & MS_NOEXEC) == MS_NOEXEC)
-		*r |= Mono_Posix_MountFlags_MS_NOEXEC;
-#endif /* ndef MS_NOEXEC */
-#ifdef MS_SYNCHRONOUS
-	if ((x & MS_SYNCHRONOUS) == MS_SYNCHRONOUS)
-		*r |= Mono_Posix_MountFlags_MS_SYNCHRONOUS;
-#endif /* ndef MS_SYNCHRONOUS */
-#ifdef MS_REMOUNT
-	if ((x & MS_REMOUNT) == MS_REMOUNT)
-		*r |= Mono_Posix_MountFlags_MS_REMOUNT;
-#endif /* ndef MS_REMOUNT */
-#ifdef MS_MANDLOCK
-	if ((x & MS_MANDLOCK) == MS_MANDLOCK)
-		*r |= Mono_Posix_MountFlags_MS_MANDLOCK;
-#endif /* ndef MS_MANDLOCK */
-#ifdef S_WRITE
-	if ((x & S_WRITE) == S_WRITE)
-		*r |= Mono_Posix_MountFlags_S_WRITE;
-#endif /* ndef S_WRITE */
-#ifdef S_APPEND
-	if ((x & S_APPEND) == S_APPEND)
-		*r |= Mono_Posix_MountFlags_S_APPEND;
-#endif /* ndef S_APPEND */
-#ifdef S_IMMUTABLE
-	if ((x & S_IMMUTABLE) == S_IMMUTABLE)
-		*r |= Mono_Posix_MountFlags_S_IMMUTABLE;
-#endif /* ndef S_IMMUTABLE */
-#ifdef MS_NOATIME
-	if ((x & MS_NOATIME) == MS_NOATIME)
-		*r |= Mono_Posix_MountFlags_MS_NOATIME;
-#endif /* ndef MS_NOATIME */
-#ifdef MS_NODIRATIME
-	if ((x & MS_NODIRATIME) == MS_NODIRATIME)
-		*r |= Mono_Posix_MountFlags_MS_NODIRATIME;
-#endif /* ndef MS_NODIRATIME */
-#ifdef MS_BIND
-	if ((x & MS_BIND) == MS_BIND)
-		*r |= Mono_Posix_MountFlags_MS_BIND;
-#endif /* ndef MS_BIND */
-#ifdef MS_RMT_MASK
-	if ((x & MS_RMT_MASK) == MS_RMT_MASK)
-		*r |= Mono_Posix_MountFlags_MS_RMT_MASK;
-#endif /* ndef MS_RMT_MASK */
-#ifdef MS_MGC_VAL
-	if ((x & MS_MGC_VAL) == MS_MGC_VAL)
-		*r |= Mono_Posix_MountFlags_MS_MGC_VAL;
-#endif /* ndef MS_MGC_VAL */
-#ifdef MS_MGC_MSK
-	if ((x & MS_MGC_MSK) == MS_MGC_MSK)
-		*r |= Mono_Posix_MountFlags_MS_MGC_MSK;
-#endif /* ndef MS_MGC_MSK */
-	return 0;
-}
-
-int Mono_Posix_FromUmountFlags (int x, int *r)
-{
-	*r = 0;
-	if (x == 0)
-		return 0;
-	if ((x & Mono_Posix_UmountFlags_MNT_FORCE) == Mono_Posix_UmountFlags_MNT_FORCE)
-#ifdef MNT_FORCE
-		*r |= MNT_FORCE;
-#else /* def MNT_FORCE */
-		{errno = EINVAL; return -1;}
-#endif /* ndef MNT_FORCE */
-	if ((x & Mono_Posix_UmountFlags_MNT_DETACH) == Mono_Posix_UmountFlags_MNT_DETACH)
-#ifdef MNT_DETACH
-		*r |= MNT_DETACH;
-#else /* def MNT_DETACH */
-		{errno = EINVAL; return -1;}
-#endif /* ndef MNT_DETACH */
-	return 0;
-}
-
-int Mono_Posix_ToUmountFlags (int x, int *r)
-{
-	*r = 0;
-	if (x == 0)
-		return 0;
-#ifdef MNT_FORCE
-	if ((x & MNT_FORCE) == MNT_FORCE)
-		*r |= Mono_Posix_UmountFlags_MNT_FORCE;
-#endif /* ndef MNT_FORCE */
-#ifdef MNT_DETACH
-	if ((x & MNT_DETACH) == MNT_DETACH)
-		*r |= Mono_Posix_UmountFlags_MNT_DETACH;
-#endif /* ndef MNT_DETACH */
-	return 0;
 }
 
 int Mono_Posix_FromWaitOptions (int x, int *r)
